# curloo

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  curloo  dockerfile
.github/workflows/: ci.yml  publish.yml
responses/: response_20250307_000115_GET_7ac67cb8bfa6e90708c87809c4fa0151.json  response_20250307_000607_GET_883f916a61cc464db3bd795c62d01b25.json  response_20250307_111105_GET_5dc097f13eaf765922bece83aea85014.text  response_20250307_111619_POST_fe19e51d46f046a3a6177a6acf73f8be.text  response_20250307_143642_POST_c928077b5fe75c9e1b73cbc9c95e2301.text  response_20250307_145157_POST_c928077b5fe75c9e1b73cbc9c95e2301.yaml  response_20250307_150409_POST_c928077b5fe75c9e1b73cbc9c95e2301.yaml  response_20250307_155030_DELETE_8dfea10f945ddb152552ada90119750b.yaml  response_20250307_161700_GET_9fc68a18b6ed11d6c73e1fd6e775d645.yaml  response_20250309_165721_GET_ce6f22383e91995d8d42f667ca131209.yaml
src/: lib.rs  main.rs
src/cli/: mod.rs  mode.rs  opts.rs
src/errors/: myerror.rs
src/http/: client.rs  handler.rs  mod.rs  validation.rs
src/models/: mod.rs  request.rs  response.rs
src/ui/: display.rs  mod.rs  prompts.rs  spinner.rs
src/utils/: file_io.rs  formatter.rs  mod.rs
